force-app/main/default/objects/sfFma__FeatureParameterBoolean__c/sfFma__FeatureParameterBoolean__c.object-meta.xml
<CustomObject>
    <description>Custom object that is part of FMA for storing Feature Parameter Overrides for booleans

A new record is created of this object for every feature parameter that is ADDED as part of a package install in an org. This record is automatically created upon every package install.

The Feature Parameter object serves as an index.</description>
    <label>Feature Parameter Boolean</label>
    <nameField>
        <displayFormat>FPB-{0000}</displayFormat>
        <label>Feature Parameter Boolean Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Parameter Booleans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>