force-app/main/default/objects/sfFma__FeatureParameterBoolean__c/fields/sfFma__FeatureParameter__c.field-meta.xml
<CustomField>
    <fullName>sfFma__FeatureParameter__c</fullName>
    <description>Associates this object to a Feature Parameter parent object.</description>
    <label>Feature Parameter</label>
    <referenceTo>sfFma__FeatureParameter__c</referenceTo>
    <relationshipLabel>Feature Parameter Booleans</relationshipLabel>
    <relationshipName>Feature_Parameter_Booleans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>