force-app/main/default/objects/sfFma__FeatureParameterBoolean__c/fields/sfFma__FullName__c.field-meta.xml
<CustomField>
    <fullName>sfFma__FullName__c</fullName>
    <description>Name of the Feature Parameter</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>