force-app/main/default/objects/sfFma__FeatureParameterBoolean__c/fields/sfFma__Value__c.field-meta.xml
<CustomField>
    <fullName>sfFma__Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature Parameter Value</label>
    <type>Checkbox</type>
</CustomField>